Extract Trains.WP8 from UKTrains.WP8 and create IrishTrains.WP8

--- a/Trains.WP8/packages.config
+++ b/Trains.WP8/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="AdDuplexWP8" version="2.8.0.3" targetFramework="wp80" />
   <package id="Coding4Fun.Toolkit.Controls" version="2.0.7" targetFramework="wp80" />
-  <package id="SharpGIS.GZipWebClient" version="1.4.0.0" targetFramework="wp80" />
+  <package id="HereLaunchers" version="1.2" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
 </packages>
