--- a/LearnOnTheGo/LearnOnTheGo.fsproj
+++ b/LearnOnTheGo/LearnOnTheGo.fsproj
@@ -7,11 +7,11 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>17cd56de-3304-43db-81e2-731624af41f2</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Coursera</RootNamespace>
-    <AssemblyName>Coursera</AssemblyName>
+    <RootNamespace>LearnOnTheGo</RootNamespace>
+    <AssemblyName>LearnOnTheGo</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile47</TargetFrameworkProfile>
-    <Name>Coursera</Name>
+    <Name>LearnOnTheGo</Name>
     <TargetFSharpCoreVersion>2.3.5.0</TargetFSharpCoreVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -22,7 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\Coursera.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\LearnOnTheGo.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,7 +31,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\Coursera.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\LearnOnTheGo.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
