--- a/Trains.WP8.IE/Trains.WP8.IE.csproj
+++ b/Trains.WP8.IE/Trains.WP8.IE.csproj
@@ -131,6 +131,10 @@
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common.WP8\Common.WP8.csproj">
+      <Project>{B4173364-79DA-4078-B0F6-7E95F0935375}</Project>
+      <Name>Common.WP8</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Trains.WP8\Trains.WP8.csproj">
       <Project>{39849162-6B6F-43FA-BEBD-C4451D37A32A}</Project>
       <Name>Trains.WP8</Name>
@@ -158,9 +162,6 @@
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=8.0.1.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WPtoolkit.4.2013.08.16\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpGIS.GZipWebClient">
-      <HintPath>..\packages\SharpGIS.GZipWebClient.1.4.0.0\lib\wp71\SharpGIS.GZipWebClient.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
