--- a/Trains/Trains.fsproj
+++ b/Trains/Trains.fsproj
@@ -59,6 +59,8 @@
     <EmbeddedResource Include="IrelandStations.xml" />
     <Content Include="IrelandStationData.xml" />
     <Content Include="IrelandTrainMovements.xml" />
+    <None Include="IndiaStations.fsx" />
+    <None Include="IndiaStations.csv" />
     <Compile Include="Stations.fs" />
     <Compile Include="LiveDepartures.fs" />
     <Compile Include="LiveDepartures.IE.fs" />
