Cache the course images

--- a/Common.WP8/Common.WP8.csproj
+++ b/Common.WP8/Common.WP8.csproj
@@ -89,6 +89,7 @@
     <Compile Include="AppMetadata.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ErrorReporting.cs" />
+    <Compile Include="ImageCacheConverter.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
